Fixed all Alignment
this is a fixed alginment

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+.container{
+  text-align: center;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -22,6 +24,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-align: center;
 }
 
 .App-link {
